--- a/index.html
+++ b/index.html
@@ -108,43 +108,29 @@
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    zoomAnimation: false,
-    fadeAnimation: false,
-    markerZoomAnimation: false
+    preferCanvas: true,
+    updateWhenZooming: true,
+    updateWhenIdle: false,
+    inertia: true
   });
 
-  const baseLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    updateWhenIdle: false,
-    updateWhenZooming: true,
-    keepBuffer: 8
+    keepBuffer: 16
   }).addTo(map);
 
-  const labelLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    opacity: 0.9,
-    updateWhenIdle: false,
-    updateWhenZooming: true,
-    keepBuffer: 8,
     zIndex: 999
   }).addTo(map);
 
   if (savedPos) {
     map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
+  } else {
+    map.setView([48.7, 19.7], 7);
   }
-
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      const geo = L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      if (!savedPos) {
-        map.fitBounds(geo.getBounds().pad(0.25));
-      }
-    });
 
   let radarFrames = [];
   let radarLayers = [];
@@ -173,18 +159,17 @@
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
+
         radarFrames.forEach((frame, i) => {
-          const layer = L.tileLayer(
-            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {
-              opacity: 0,
-              updateWhenIdle: false,
-              updateWhenZooming: true,
-              keepBuffer: 8
-            }
-          ).addTo(map);
-          radarLayers[i] = layer;
+          if (i > radarFrames.length - 11) {
+            const layer = L.tileLayer(
+              `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+              {opacity: 0, keepBuffer: 16}
+            ).addTo(map);
+            radarLayers[i] = layer;
+          }
         });
+
         fadeToFrame(currentIndex);
       });
   }
@@ -210,7 +195,7 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         fadeToFrame(currentIndex);
-      }, 800);
+      }, 600);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
