--- a/index.html
+++ b/index.html
@@ -10,37 +10,9 @@
       width: 100%;
       margin: 0;
       padding: 0;
+      background: #1b1b1b;
     }
-    .leaflet-control-zoom,
-    .leaflet-control-attribution {
-      display: none;
-    }
-    #liveBadge {
-      position: fixed;
-      top: 15px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: red;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 6px 14px;
-      border-radius: 25px;
-      z-index: 9999;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: Arial, sans-serif;
-      box-shadow: 0 0 8px rgba(0,0,0,0.5);
-    }
-    #liveBadge::before {
-      content: "";
-      width: 10px;
-      height: 10px;
-      background: white;
-      border-radius: 50%;
-      margin-right: 8px;
-    }
+    .leaflet-control-zoom, .leaflet-control-attribution { display: none; }
     #controls {
       position: fixed;
       bottom: 100px;
@@ -62,19 +34,11 @@
       height: 45px;
       border-radius: 50%;
       cursor: pointer;
-      transition: background 0.2s;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    #controls button:hover {
-      background: #155A9C;
-    }
-    #controls img {
-      width: 22px;
-      height: 22px;
-      filter: invert(1);
-    }
+    #controls img { width: 22px; height: 22px; filter: invert(1); }
     #timeBox {
       position: fixed;
       bottom: 30px;
@@ -84,11 +48,25 @@
       color: white;
       padding: 8px 20px;
       border-radius: 15px;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
       z-index: 9999;
-      font-family: Arial, sans-serif;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      font-family: Arial, sans-serif;
+    }
+    #liveBox {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: red;
+      color: white;
+      font-weight: bold;
+      font-family: Arial, sans-serif;
+      padding: 4px 10px;
+      border-radius: 12px;
+      box-shadow: 0 0 6px rgba(0,0,0,0.5);
+      z-index: 9999;
     }
     #attribution {
       position: fixed;
@@ -96,24 +74,18 @@
       right: 0;
       background: rgba(0,0,0,0.6);
       color: #ccc;
-      padding: 3px 6px;
+      padding: 2px 6px;
       border-top-left-radius: 5px;
       font-size: 11px;
       font-family: Arial, sans-serif;
       z-index: 9999;
     }
-    #attribution a {
-      color: #66b3ff;
-      text-decoration: none;
-    }
-    #attribution a:hover {
-      text-decoration: underline;
-    }
+    #attribution a { color: #66b3ff; text-decoration: none; }
   </style>
 </head>
 <body>
-<div id="liveBadge">NAŽIVO</div>
 <div id="map"></div>
+<div id="liveBox">● NAŽIVO</div>
 
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
@@ -134,22 +106,21 @@
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    preferCanvas: true,
-    minZoom: 5,
-    maxZoom: 11,
-    updateWhenZooming: true,
-    updateWhenIdle: true
+    preferCanvas: true
   });
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 11,
-    keepBuffer: 4
+    maxZoom: 12,
+    keepBuffer: 6,
+    updateWhenZooming: false,
+    updateWhenIdle: true
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 11,
+    opacity: 1,
+    maxZoom: 12,
     zIndex: 999
   }).addTo(map);
 
@@ -160,9 +131,9 @@
   }
 
   let radarFrames = [];
+  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
-  let radarLayer = null;
   const timeBox = document.getElementById("timeBox");
 
   function formatDate(timestamp) {
@@ -171,25 +142,29 @@
     return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
 
-  function showFrame(index) {
-    if (!radarFrames[index]) return;
-    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-
-    if (!radarLayer) {
-      radarLayer = L.tileLayer(url, {opacity: 0.8, zIndex: 500}).addTo(map);
-    } else {
-      radarLayer.setUrl(url);
-    }
+  function fadeToFrame(index) {
+    radarLayers.forEach((layer, i) => {
+      layer.setOpacity(i === index ? 0.8 : 0);
+    });
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
+    radarLayers.forEach(layer => map.removeLayer(layer));
+    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
-        showFrame(currentIndex);
+        radarFrames.forEach(frame => {
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {opacity: 0, zIndex: 500}
+          ).addTo(map);
+          radarLayers.push(layer);
+        });
+        fadeToFrame(currentIndex);
       });
   }
 
@@ -197,12 +172,14 @@
 
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    showFrame(currentIndex);
+    fadeToFrame(currentIndex);
   };
+
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
-    showFrame(currentIndex);
+    fadeToFrame(currentIndex);
   };
+
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -211,11 +188,12 @@
     } else {
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
-        showFrame(currentIndex);
-      }, 900);
+        fadeToFrame(currentIndex);
+      }, 600);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
+
   document.getElementById("refresh").onclick = () => loadRadar();
 
   map.on("moveend", () => {
