--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
     map.setView([48.7, 19.7], 7);
   }
 
+  // ✅ GEOJSON hranice Slovenska (optimalizované)
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      L.geoJSON(data, {
+        style: {
+          color: "#00bfff",
+          weight: 1,
+          fillOpacity: 0
+        },
+        interactive: false // žiadna interakcia, rýchlejšie vykreslenie
+      }).addTo(map);
+    });
+
   let radarFrames = [];
   let radarLayers = [];
   let currentIndex = 0;
