--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
     html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#1b1b1b;}
     .leaflet-control-zoom,.leaflet-control-attribution{display:none;}
 
+    #liveLabel {
+      position:fixed;top:8px;left:50%;transform:translateX(-50%);
+      background:#FF0000;color:white;font-weight:bold;
+      padding:4px 14px;border-radius:15px;
+      font-family:Arial,sans-serif;font-size:16px;
+      box-shadow:0 0 6px rgba(0,0,0,0.5);z-index:10000;
+      text-transform:uppercase;letter-spacing:1px;
+    }
+
     #searchBox {
-      position:fixed;top:15px;left:50%;transform:translateX(-50%);
+      position:fixed;top:45px;left:50%;transform:translateX(-50%);
       background:#072C4E;padding:6px 10px;border-radius:20px;
       display:flex;align-items:center;gap:6px;z-index:9999;
       box-shadow:0 0 8px rgba(0,0,0,0.5);
     }
     #searchBox input {
       border:none;outline:none;background:white;color:#000;
-      padding:5px 10px;border-radius:15px;width:180px;
-      font-size:14px;
+      padding:5px 10px;border-radius:15px;width:180px;font-size:14px;
     }
     #searchBox button {
       background:#0D3F73;color:white;border:none;
@@ -54,6 +62,8 @@
 <body>
 <div id="map"></div>
 
+<div id="liveLabel">NAŽIVO</div>
+
 <div id="searchBox">
   <input type="text" id="cityInput" placeholder="Zadaj mesto...">
   <button id="searchBtn">Nájsť</button>
@@ -74,11 +84,11 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+  const savedPos=JSON.parse(localStorage.getItem("mapPos"))||null;
 
-  const map = L.map('map', {
+  const map=L.map('map',{
     zoomControl:false,attributionControl:false,preferCanvas:true,
-    inertia:true,inertiaDeceleration:4000,zoomAnimation:true
+    inertia:true,inertiaDeceleration:4500,zoomAnimation:true
   });
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{
@@ -128,7 +138,7 @@
         radarFrames.forEach(fr=>{
           const lay=L.tileLayer(
             `https://tilecache.rainviewer.com/v2/radar/${fr.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {opacity:0,zIndex:500,updateWhenIdle:false,keepBuffer:6,reuseTiles:true}
+            {opacity:0,zIndex:500,updateWhenIdle:false,keepBuffer:6,reuseTiles:true,maxZoom:12}
           ).addTo(map);
           radarLayers.push(lay);
         });
@@ -154,7 +164,7 @@
       playInterval=setInterval(()=>{
         currentIndex=(currentIndex+1)%radarFrames.length;
         fadeToFrame(currentIndex);
-      },700);
+      },800);
       document.getElementById("playIcon").src="https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
@@ -165,7 +175,6 @@
     localStorage.setItem("mapPos",JSON.stringify({lat:c.lat,lng:c.lng,zoom:map.getZoom()}));
   });
 
-  // ✅ Vyhľadávanie mesta
   document.getElementById("searchBtn").onclick=()=>{
     const city=document.getElementById("cityInput").value.trim();
     if(!city)return;
