--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok</title>
+  <title>Radar zrážok – Naživo</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#1b1b1b;}
@@ -16,23 +16,6 @@
       box-shadow:0 0 6px rgba(0,0,0,0.5);z-index:10000;
       text-transform:uppercase;letter-spacing:1px;
     }
-
-    #searchBox {
-      position:fixed;top:45px;left:50%;transform:translateX(-50%);
-      background:#072C4E;padding:6px 10px;border-radius:20px;
-      display:flex;align-items:center;gap:6px;z-index:9999;
-      box-shadow:0 0 8px rgba(0,0,0,0.5);
-    }
-    #searchBox input {
-      border:none;outline:none;background:white;color:#000;
-      padding:5px 10px;border-radius:15px;width:180px;font-size:14px;
-    }
-    #searchBox button {
-      background:#0D3F73;color:white;border:none;
-      padding:5px 12px;border-radius:15px;cursor:pointer;
-      font-size:14px;transition:background 0.2s;
-    }
-    #searchBox button:hover {background:#155A9C;}
 
     #controls {
       position:fixed;bottom:100px;left:50%;transform:translateX(-50%);
@@ -63,11 +46,6 @@
 <div id="map"></div>
 
 <div id="liveLabel">NAŽIVO</div>
-
-<div id="searchBox">
-  <input type="text" id="cityInput" placeholder="Zadaj mesto...">
-  <button id="searchBtn">Nájsť</button>
-</div>
 
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
@@ -174,22 +152,6 @@
     const c=map.getCenter();
     localStorage.setItem("mapPos",JSON.stringify({lat:c.lat,lng:c.lng,zoom:map.getZoom()}));
   });
-
-  document.getElementById("searchBtn").onclick=()=>{
-    const city=document.getElementById("cityInput").value.trim();
-    if(!city)return;
-    fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(city)}`)
-      .then(r=>r.json())
-      .then(data=>{
-        if(data && data.length>0){
-          const lat=+data[0].lat,lng=+data[0].lon;
-          map.setView([lat,lng],10);
-        }else{
-          alert("Mesto sa nenašlo.");
-        }
-      })
-      .catch(()=>alert("Chyba pri vyhľadávaní."));
-  };
 </script>
 </body>
 </html>
