--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js?v=2"></script>
 <script>
   const savedPos=JSON.parse(localStorage.getItem("mapPos"))||null;
 
