--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Radar zrážok – Naživo</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css?v=5"/>
   <style>
     html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#1b1b1b;}
     .leaflet-control-zoom,.leaflet-control-attribution{display:none;}
@@ -60,21 +64,20 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js?v=2"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js?v=5"></script>
 <script>
   const savedPos=JSON.parse(localStorage.getItem("mapPos"))||null;
-
   const map=L.map('map',{
     zoomControl:false,attributionControl:false,preferCanvas:true,
     inertia:true,inertiaDeceleration:4500,zoomAnimation:true
   });
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png?v=5',{
     subdomains:'abcd',maxZoom:12,keepBuffer:6,
     updateWhenZooming:true,updateWhenIdle:false,reuseTiles:true
   }).addTo(map);
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png',{
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png?v=5',{
     subdomains:'abcd',opacity:1,maxZoom:12,zIndex:999
   }).addTo(map);
 
@@ -82,7 +85,7 @@
   else{map.setView([48.7,19.7],7);}
 
   function loadGeoJSON(retry=0){
-    fetch("slovakia_Regions_level_1.geojson")
+    fetch("slovakia_Regions_level_1.geojson?v=5")
       .then(r=>r.json())
       .then(data=>{
         L.geoJSON(data,{style:{color:"#00bfff",weight:1,fillOpacity:0},interactive:false}).addTo(map);
@@ -108,14 +111,14 @@
   function loadRadar(){
     radarLayers.forEach(l=>map.removeLayer(l));
     radarLayers=[];
-    fetch("https://api.rainviewer.com/public/weather-maps.json")
+    fetch("https://api.rainviewer.com/public/weather-maps.json?v=5")
       .then(r=>r.json())
       .then(d=>{
         radarFrames=d.radar.past.concat(d.radar.nowcast);
         currentIndex=d.radar.past.length-1;
         radarFrames.forEach(fr=>{
           const lay=L.tileLayer(
-            `https://tilecache.rainviewer.com/v2/radar/${fr.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            `https://tilecache.rainviewer.com/v2/radar/${fr.path}/256/{z}/{x}/{y}/4/1_1.png?v=5`,
             {opacity:0,zIndex:500,updateWhenIdle:false,keepBuffer:6,reuseTiles:true,maxZoom:12}
           ).addTo(map);
           radarLayers.push(lay);
